Adding security & template show user

--- a/templates/easy_admin/show.html.twig
+++ b/templates/easy_admin/show.html.twig
@@ -3,5 +3,11 @@
 {% block main %}
   {{ parent() }}
 
-  {#{{ render(controller('App\Controller\Controller::list'), ['user' => entity]) }}#}
+  {#{% for order in entity.orders %}#}
+  {#{{ order }}#}
+  {#{% endfor %}#}
+
+  <div>
+    {{ render(controller('App\\Controller\\User\\UserController::availableCopies', {'user': entity})) }}
+  </div>
 {% endblock main %}
