--- a/templates/user/copies.html.twig
+++ b/templates/user/copies.html.twig
@@ -1,7 +1,17 @@
-<div class="userAvailableCopies_title">Copies disponibles :</div>
-<div class="userAvailableCopies_container">
+<h4>
+  Nombre de copies disponibles :
+</h4>
+<div class="form-horizontal">
   {% for copyType, numberAvailableCopy in availableCopies %}
-    <div class="userAvailableCopies_type">{{ copyType }}</div>
-    <div class="userAvailableCopies_number">{{ numberAvailableCopy }}</div>
+    <div class="form-group field-string">
+      <label class="col-sm-2 control-label">
+        {{ copyType }}
+      </label>
+      <div class="col-sm-10">
+        <div class="form-control">
+          {{ numberAvailableCopy }}
+        </div>
+      </div>
+    </div>
   {% endfor %}
 </div>
