--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,14 +1,61 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+  <link rel="stylesheet" type="text/css" href="/bundles/login/fonts/iconic/css/material-design-iconic-font.min.css">
+  <link rel="stylesheet" type="text/css" href="/bundles/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/bundles/login/css/util.css">
+  <link rel="stylesheet" type="text/css" href="/bundles/login/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/build/css/app.css">
+{% endblock %}
+
 {% block body %}
-  {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-  {% endif %}
-  <form action="{{ path('login') }}" method="post">
-    <label for="username">Login :</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
-    <label for="password">Mot de passe :</label>
-    <input type="password" id="password" name="_password" />
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-    <button type="submit">login</button>
-  </form>
+  <div id="login" class="limiter">
+    <div class="container-login100">
+      <div class="wrap-login100">
+        <form action="{{ path('login') }}" method="post" class="login100-form validate-form">
+					<span class="login100-form-title p-b-26">
+						Copyvore
+					</span>
+          <span class="login100-form-title p-b-30">
+						<img src="/images/100x100-copyvore.jpg" title="Copyvore" width="100" height="100" />
+					</span>
+          {% if error %}
+            <div class="p-b-40 error-login"><span class="error-login-image"></span>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+          {% endif %}
+          <div class="wrap-input100 validate-input" data-validate="Champs obligatoire">
+            <input class="input100" type="text" id="username" name="_username" value="{{ last_username }}">
+            <span class="focus-input100" data-placeholder="Login"></span>
+          </div>
+          <div class="wrap-input100 validate-input" data-validate="Champs obligatoire">
+						<span class="btn-show-pass">
+							<i class="zmdi zmdi-eye"></i>
+						</span>
+            <input class="input100" type="password" id="password" name="_password">
+            <span class="focus-input100" data-placeholder="Mot de passe"></span>
+          </div>
+          <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+          <div class="container-login100-form-btn">
+            <div class="wrap-login100-form-btn">
+              <div class="login100-form-bgbtn"></div>
+              <button class="login100-form-btn">
+                Login
+              </button>
+            </div>
+          </div>
+          <div class="text-center p-t-115">
+						<span class="txt1">
+							Vous n'avez pas encore de compte ?
+              <br>
+              Alors venez nous voir !
+						</span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+
+{% block javascripts %}
+  <script src="/bundles/login/vendor/jquery/jquery-3.2.1.min.js"></script>
+  <script src="/build/js/app.js"></script>
+  <script src="/bundles/login/js/main.js"></script>
 {% endblock %}
