Update coming soon page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Copyvore{% endblock %}</title>
+        <link rel="icon" href="/images/favicon.ico" />
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
