--- a/public/assets/css/app.scss
+++ b/public/assets/css/app.scss
@@ -18,13 +18,47 @@ div.money-display {
 
 /** LOGIN TEMPLATES **/
 .error-login {
-  color: #ff3e0e;
-  font-family: FontAwesome;
+  color: #FF3E0E;
+  font-family: Poppins-Bold;
   font-size: 16px;
 }
 
 .error-login-image::before {
+  font-family: FontAwesome;
   display: inline-block;
   content: "\f071";
   padding-right: 10px;
+}
+
+/** COMING SOON **/
+.copyvore {
+  &-container {
+    color: whitesmoke;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 340px;
+
+    a {
+      color: whitesmoke;
+    }
+  }
+
+  &-subtitle {
+    text-align: center;
+    font-weight: bold;
+    font-size: 26px;
+  }
+
+  &-infos {
+    background: #FF3E0E;
+    color: white;
+
+    &-td {
+      width: 40px;
+    }
+  }
+}
+
+.socialmedia-container {
+  padding: 60px 30px 50px;;
 }
