fixing plugins login/progress

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-  <link rel="stylesheet" href="/bundles/progress/css/style.css">
+  <link rel="stylesheet" href="/progress/css/style.css">
   <link rel="stylesheet" type="text/css" href="/build/css/app.css">
 {% endblock %}
 
@@ -105,9 +105,9 @@
 {% endblock %}
 
 {% block javascripts %}
-  <script src="/bundles/progress/js/jquery.js"></script>
-  <script src="/bundles/progress/js/countdown.js"></script>
-  <script src="/bundles/progress/js/owlcarousel.js"></script>
-  <script src="/bundles/progress/js/uikit.scrollspy.js"></script>
-  <script src="/bundles/progress/js/scripts.js"></script>
+  <script src="/progress/js/jquery.js"></script>
+  <script src="/progress/js/countdown.js"></script>
+  <script src="/progress/js/owlcarousel.js"></script>
+  <script src="/progress/js/uikit.scrollspy.js"></script>
+  <script src="/progress/js/scripts.js"></script>
 {% endblock %}
