--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-  <link rel="stylesheet" type="text/css" href="/bundles/login/fonts/iconic/css/material-design-iconic-font.min.css">
-  <link rel="stylesheet" type="text/css" href="/bundles/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/bundles/login/css/util.css">
-  <link rel="stylesheet" type="text/css" href="/bundles/login/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/login/fonts/iconic/css/material-design-iconic-font.min.css">
+  <link rel="stylesheet" type="text/css" href="/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/login/css/util.css">
+  <link rel="stylesheet" type="text/css" href="/login/css/main.css">
   <link rel="stylesheet" type="text/css" href="/build/css/app.css">
 {% endblock %}
 
@@ -55,7 +55,7 @@
 {% endblock %}
 
 {% block javascripts %}
-  <script src="/bundles/login/vendor/jquery/jquery-3.2.1.min.js"></script>
+  <script src="/login/vendor/jquery/jquery-3.2.1.min.js"></script>
   <script src="/build/js/app.js"></script>
-  <script src="/bundles/login/js/main.js"></script>
+  <script src="/login/js/main.js"></script>
 {% endblock %}
