fixing css bugs

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
+  <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
   <link rel="stylesheet" href="/progress/css/style.css">
   <link rel="stylesheet" type="text/css" href="/build/css/app.css">
 {% endblock %}
