--- a/public/assets/css/app.scss
+++ b/public/assets/css/app.scss
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 td.money-display:after {
   display: inline;
   content: "€";
@@ -30,16 +34,32 @@ div.money-display {
   padding-right: 10px;
 }
 
+.remember-me {
+  font-family: Poppins-Regular;
+  font-size: 15px;
+  color: #989898;
+
+  span {
+    position: relative;
+    top: -1px;
+    left: 3px;
+  }
+}
+
 /** COMING SOON **/
 .copyvore {
   &-container {
     color: whitesmoke;
     margin: 0 auto;
     width: 100%;
-    max-width: 340px;
+    max-width: 360px;
 
     a {
       color: whitesmoke;
+    }
+
+    td {
+      vertical-align: top;
     }
   }
 
@@ -61,4 +81,8 @@ div.money-display {
 
 .socialmedia-container {
   padding: 60px 30px 50px;;
+
+  ul {
+    padding: 0;
+  }
 }
