Adding password encoder for user and admin

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,114 +1,14 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-  <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
-  <link rel="stylesheet" href="/progress/css/style.css">
-  <link rel="stylesheet" type="text/css" href="/build/css/app.css">
+TU METS TES CSS ICI
 {% endblock %}
 
 {% block body %}
-  <body id="backtotop">
-  <div class="fullwidth clearfix">
-    <div id="topcontainer" class="bodycontainer clearfix">
-      <p><img width="200" height="200" class="commingsoon-image" src="/images/copyvore.jpg" title="Copyvore" /></p>
-      <h1><span>Le Copyvore</span><br />arrive bientôt</h1>
-      <p>C'est presque terminé... Promis !</p>
-    </div>
-  </div>
-  <div class="arrow-separator arrow-white"></div>
-  <div class="fullwidth copyvore-infos">
-    <div class="copyvore-subtitle">En attendant ? Venez nous voir directement !</div>
-    <div class="copyvore-container">
-      <br>
-      <table>
-        <tr>
-          <td class="copyvore-infos-td">
-            <span class="fa fa-home"></span>
-          </td>
-          <td>
-            35, Rue des Brasseurs<br>
-            4500 Huy
-          </td>
-        </tr>
-        <tr>
-          <td class="copyvore-infos-td">
-            <span class="fa fa-phone"></span>
-          </td>
-          <td>
-            Tél / Fax : <a href="tel:+3285230320">085/230.320</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="copyvore-infos-td">
-            <span class="fa fa-envelope"></span>
-          </td>
-          <td>
-            <a href="mailto:contact@copyvore.com">contact@copyvore.com</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="copyvore-infos-td">
-            <span class="fa fa-clock-o"></span>
-          </td>
-          <td>
-            <table>
-              <tr>
-                <td>Horaires : &nbsp;&nbsp;</td>
-                <td>Lundi</td>
-                <td>09:00 - 18:00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Mardi</td>
-                <td>09:00 - 18:00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Mercredi</td>
-                <td>09:00 - 18:00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Jeudi</td>
-                <td>09:00 - 18:00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Vendredi</td>
-                <td>09:00 - 18:00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Samedi</td>
-                <td>09:00 - 13:00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Dimanche&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                <td>Fermé</td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </div>
-  <div class="arrow-separator arrow-red"></div>
-  <div class="fullwidth clearfix socialmedia-container">
-    <div id="footercont" class="bodycontainer clearfix">
-      <div id="socialmedia" class="clearfix">
-        <ul>
-          <li><a title="" href="https://fr-fr.facebook.com/copyvore/" rel="external"><span class="fa fa-facebook"></span></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
+  <body>
+    TU MET TON CONTENU ICI
   </body>
 {% endblock %}
 
 {% block javascripts %}
-  <script src="/progress/js/jquery.js"></script>
-  <script src="/progress/js/countdown.js"></script>
-  <script src="/progress/js/owlcarousel.js"></script>
-  <script src="/progress/js/uikit.scrollspy.js"></script>
-  <script src="/progress/js/scripts.js"></script>
+  METS TES JS ICI
 {% endblock %}
